fixed button overlap on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,6 +5,9 @@
 
 #nextMovieDescription {
     font-size: 1.3em;
+    width: 100%;
+    padding-left: 45px;
+    padding-right: 45px;
 }
 
 #nextMovieRight {
